k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: html-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: html-app
  template:
    metadata:
      labels:
        app: html-app
    spec:
      containers:
      - name: html-container
        image: nginx:alpine
        ports:
        - containerPort: 80
