k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: html-ingress
spec:
  rules:
  - host: html.imcc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: html-service
            port:
              number: 80
